Correct title overlapping

--- a/style/product-container-style.sass
+++ b/style/product-container-style.sass
@@ -101,7 +101,7 @@ h1
   bottom: 0px
   margin-left: 10px
   font-weight: 700
-  z-index: 100
+  
 
 
 
